# win-set-metric

./: CMakeLists.txt
src/: CMakeLists.txt  IfTable2Wrapper.cpp  IfTable2Wrapper.h  IpInterfaceHelper.cpp  IpInterfaceHelper.h  MultibyteString.cpp  MultibyteString.h  main.cpp  windows-api-headers.h
